Release notes 0.0.1

- fork Github Amajurez/Bytecoin
- clean up files

Release notes 0.0.1 b0

- fixed Inodes
- updates p2pnetwork

Release notes 0.0.1 b1

- updates seed and removed checkpoint

Release notes 0.0.1 b2

- gcc7 small fixed by vkobel

Release notes 0.0.1 b3

- added premine[not test yet]
- fixed hangup in Dispatcher::yield() in Linux by rs-blashyrkh
- docs: typo nuber to number by JaysonH91
- rocksdb clean by leviarcoin
- walletd, not walled by paulmadore
- fix verification failed by RocksteadyTC
- change supply and longer difficult target
- decrease size block. [for prepare split chain method[EvoChain]]

Release notes 0.0.1 b4

- fee and dust dropped to help with mining payouts by Vetro7
- added ico and pos[not test yet]
- added travis
- added modules
  - cmake v3.10.2

Release notes 0.0.1 b5

- added build rainmanp7
- remove connectivity tool rainmanp7
- added mandatory
- bug fixes + karbo support
- added new monsty as contibutor
- added branch notetoken
- remove old beta4 branch
- added export key

Release notes 0.0.1 b6

- ruby bug remove branch
- scalarmultikey added